<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.android.iak3_bproject.DetailPatunganActivity"
    tools:showIn="@layout/activity_detail_patungan">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:padding="@dimen/activity_horizontal_margin"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:textColor="@color/textColorPrimary"
                android:id="@+id/txt_name"
                android:textSize="36sp"/>
            <ImageView
                android:id="@+id/icon_price"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/icons8_pricing"
                android:layout_below="@id/txt_name"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_price"
                android:textColor="@color/textColorPrimary"
                android:layout_below="@id/txt_name"
                android:layout_toRightOf="@id/icon_price"
                android:layout_toEndOf="@id/icon_price"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_date"
                android:textColor="@color/textColorPrimary"
                android:layout_alignParentBottom="true"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_one_pay"
                android:textColor="@color/textColorPrimary"
                android:layout_above="@id/txt_date"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_num"
                android:layout_above="@id/txt_one_pay"
                android:textColor="@color/textColorPrimary"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:padding="8dp">

            <TextView
                android:id="@+id/no_list_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:text="@string/txt_no_person_title"
                android:textColor="#dfdfdf"
                android:textAppearance="?android:attr/textAppearanceLarge"/>

            <TextView
                android:id="@+id/no_list_desc"
                android:layout_below="@id/no_list_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/txt_no_person_desc"
                android:textColor="#dfdfdf"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <TextView
                android:id="@+id/txt_participant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_participant"/>
            <ListView
                android:id="@+id/person_list"
                android:layout_below="@id/txt_participant"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="8dp"
                android:paddingStart="8dp"
                android:paddingRight="8dp"
                android:paddingEnd="8dp"
                android:dividerHeight="2.0sp">
            </ListView>
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>